--- a/_layouts/clean.html
+++ b/_layouts/clean.html
@@ -27,13 +27,13 @@
         </main>
 
         <footer>
-          <p class="copy">
-            <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
-                    | Powered by Jekyll and
-                    <a target="_blank" href="https://github.com/jitinnair1/gradfolio/">Gradfolio</a>.
-                    Last updated on {{ site.time | date_to_long_string }}
-            </small>
-          </p>
+            <p class="copy">
+                <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
+                    | Powered by Jekyll via
+                    <a target="_blank" href="https://github.com/rahil-makadia/website/">GitHub</a>
+                    | Last updated on {{ site.time | date_to_long_string }}
+                </small>
+            </p>
 
         {% include social-footer.html %}
 
