--- a/_layouts/clean.html
+++ b/_layouts/clean.html
@@ -30,7 +30,7 @@
             <p class="copy">
                 <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
                     | Powered by Jekyll via
-                    <a target="_blank" href="https://github.com/rahil-makadia/website/">GitHub</a>
+                    <a target="_blank" href="https://github.com/rahil-makadia/rahil-makadia.github.io/">GitHub</a>
                     | Last updated on {{ site.time | date_to_long_string }}
                 </small>
             </p>
