--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Home</a>
         <!-- <a href="{{site.baseurl}}/projects/">Projects</a> -->
+        <a target="_blank" href="https://rahil-makadia.github.io/grss/">GRSS</a>
         <a href="{{site.baseurl}}/cv/">CV</a>
 </div>
