--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
         <h1 class="post-headline">{{site.title}}</h1>
-        <h3 class="post-description">{{site.description}}</h3>
+        <!-- <h3 class="post-description">{{site.description}}</h3> -->
 
         {% include navigation.html %}
 
@@ -21,7 +21,7 @@
         {% include mathjax.html %}
 
         <!-- Load fontawesome here for faster loadtimes: https://stackoverflow.com/a/35880730/9523246 -->
-        <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v5.11.0/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+        <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v6.5.1/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
     </head>
 
     <body>
@@ -32,6 +32,7 @@
         </main>
 
         <footer>
+            {% include social-footer.html %}
             <p class="copy">
                 <small> &copy; {{site.title}} {{ site.time | date: '%Y' }}
                     | Powered by Jekyll via
@@ -39,9 +40,6 @@
                     | Last updated on {{ site.time | date_to_long_string }}
                 </small>
             </p>
-
-        {% include social-footer.html %}
-
         </footer>
 
         {% include analytics.html %}
