footer color update

--- a/assets/css/_sass/footer-social.scss
+++ b/assets/css/_sass/footer-social.scss
@@ -92,7 +92,7 @@
 .rounded-social-buttons .social-button.email:hover, .rounded-social-buttons .social-button.email:focus {
   color: #60c17d;
   background: #fefefe;
-  border-color: #000000;
+  border-color: #60c17d;
 }
 
 .rounded-social-buttons .social-button.orcid {
@@ -122,7 +122,7 @@
 .rounded-social-buttons .social-button.quora:hover, .rounded-social-buttons .social-button.quora:focus {
   color: #a82400;
   background: #fefefe;
-  border-color: #5dd1b0;
+  border-color: #a82400;
 }
 
 .rounded-social-buttons .social-button.instagram {
@@ -137,7 +137,7 @@
 .rounded-social-buttons .social-button.instagram:hover, .rounded-social-buttons .social-button.instagram:focus {
     color: #a82400;
     background: #fefefe;
-    border-color: #5dd1b0;
+    border-color: #f09433;
 }
 
 .rounded-social-buttons .social-button.stackoverflow {
@@ -147,7 +147,7 @@
 .rounded-social-buttons .social-button.stackoverflow:hover, .rounded-social-buttons .social-button.stackoverflow:focus {
   color: #f48024;
   background: #fefefe;
-  border-color: #5dd1b0;
+  border-color: #f48024;
 }
 
 .rounded-social-buttons .social-button.google-scholar {
@@ -157,7 +157,7 @@
 .rounded-social-buttons .social-button.google-scholar:hover, .rounded-social-buttons .social-button.google-scholar:focus {
   color: #336cf0;
   background: #fefefe;
-  border-color: #5dd1b0;
+  border-color: #336cf0;
 }
 
 .rounded-social-buttons .social-button.ads {
@@ -167,5 +167,5 @@
 .rounded-social-buttons .social-button.ads:hover, .rounded-social-buttons .social-button.ads:focus {
   color: #245eda;
   background: #fefefe;
-  border-color: #5dd1b0;
+  border-color: #245eda;
 }
