--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,10 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
+        <meta name="google-site-verification" content="m7EjmoPEw8C3mAi1qpJ8Vf_eKPqpQy9XxT7w_mnCVPo" />
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
-        <h1 class="post-headline">{{site.title}}</h1>
+        <h1 class="post-headline" style="text-align: center;">{{site.title}}</h1>
         <!-- <h3 class="post-description">{{site.description}}</h3> -->
 
         {% include navigation.html %}
