big upgrade time

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,7 @@
-<div class="links scroll">
-        <a href="{{site.baseurl}}/">Home</a>
-        <!-- <a href="{{site.baseurl}}/projects/">Projects</a> -->
-        <a target="_blank" href="https://rahil-makadia.github.io/grss/">GRSS</a>
-        <a href="{{site.baseurl}}/cv/">CV</a>
+<div class="links scroll" style="text-align: center;">
+    <a href="{{site.baseurl}}/">Home</a>
+    <a href="{{site.baseurl}}/projects/dart/">DART</a>
+    <a target="_blank" href="https://rahil-makadia.github.io/grss/">GRSS</a>
+    <a href="{{site.baseurl}}/projects/orex/">OSIRIS-REx/OSIRIS-APEX</a>
+    <a href="{{site.baseurl}}/cv/">CV</a>
 </div>
