--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
 
         <h1 class="post-headline" style="text-align: center;">{{site.title}}</h1>
         <!-- <h3 class="post-description">{{site.description}}</h3> -->
+        <div style="line-height:80%;">
+            <br>
+        </div>
 
         {% include navigation.html %}
 
